--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -11,18 +11,26 @@
   },
   "dependencies": {
     "@northlight/ui": "^2.28.1",
+    "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.14",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "mocha": "^10.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
