--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/pie": "^0.85.1",
     "@northlight/ui": "^2.28.1",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
