fix(willysgpt): timeline fixes

--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@nivo/pie": "^0.85.1",
+    "@northlight/tokens": "^1.4.4",
     "@northlight/ui": "^2.28.1",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
