--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@nivo/heatmap": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@northlight/tokens": "^1.4.4",
     "@northlight/ui": "^2.28.1",
+    "capitalize": "^2.0.4",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/capitalize": "^2.0.2",
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.7",
