--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@nivo/heatmap": "^0.85.1",
     "@nivo/pie": "^0.85.1",
+    "@northlight/icons": "^1.5.2",
     "@northlight/tokens": "^1.4.4",
     "@northlight/ui": "^2.28.1",
     "capitalize": "^2.0.4",
