--- a/willysgpt-frontend/package.json
+++ b/willysgpt-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@nivo/heatmap": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@northlight/icons": "^1.5.2",
